# AI-SRE-INCIDENT-ANALYSIS-SYSTEM-AWS-

./: .flake8  .gitignore  Makefile  QUICKSTART.md  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.sh
.github/: SETUP.md
.github/workflows/: README.md  ci-cd.yml  codeql-analysis.yml  ephemeral-e2e-test.yml
.kiro/steering/: product.md  structure.md  tech.md
docs/: DEMO.md  DESIGN.md  PROMPT_TEMPLATE.md  STRUCTURED_LOGGING.md  TASK-0-SUMMARY.md  TASK-15.1-SUMMARY.md
scripts/: README.md  capture-alarm-event.sh  create_prompt_template.py  package-lambdas.sh  reset-test-alarm.sh  setup-github-oidc.sh  trigger-test-alarm.sh
src/: README.md
src/correlation_engine/: lambda_function.py  requirements.txt
src/deploy_context_collector/: lambda_function.py
src/event_transformer/: lambda_function.py
src/llm_analyzer/: lambda_function.py  prompt_builder.py
src/logs_collector/: lambda_function.py  log_group_resolver.py
src/metrics_collector/: lambda_function.py
src/notification_service/: lambda_function.py
src/shared/: __init__.py  log_metadata.py  metrics.py  models.py  structured_logger.py
terraform/: DEPLOYMENT.md  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/test-scenario/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
test-data/: README.md
tests/: conftest.py
tests/infrastructure/: test_cloudwatch_alarms_configuration.py  test_dynamodb_configuration.py  test_eventbridge_configuration.py  test_iam_policies.py  test_lambda_configuration.py  (+4 more)
(+74 files in other folders)
